[FIX] web: tags colors in dark mode
Fixed big color gap between light mode and dark mode tags

part of task-3085081

Part-of: odoo/enterprise#33145

--- a/web_enterprise/static/src/scss/secondary_variables.dark.scss
+++ b/web_enterprise/static/src/scss/secondary_variables.dark.scss
@@ -9,7 +9,7 @@ $o-colors: ()!default;
 $o-colors-secondary: ()!default;
 $o-colors-complete-first: saturate(mix(#134E5E , $o-black, 70%), 80%) !default;
 
-@each $-color in $o-colors-secondary-original {
+@each $-color in $o-colors-original {
     $-adjusted: saturate(mix($-color, $o-black, 70%), 80%);
     $o-colors: append($o-colors, $-adjusted);
 }
